deployment/deployment.yaml
#| filename: "deployment/deployment.yaml"
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summarizer-deployment
  labels:
    app: summarizer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: summarizer
  template:
    metadata:
      labels:
        app: summarizer
    spec:
      containers:
      - name: summarizer
        image: boalong/ensae-prod-debug:latest
        ports:
        - containerPort: 8000
