deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: summarizer-service
spec:
  selector:
    app: summarizer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
